third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/mul_assign/unknown_container_attribute.rs
#[derive(derive_more::MulAssign)]
#[mul_assign(unknown)]
struct Foo( i32);

fn main() {}
